# camp_calendar

./: .gitignore  DEBUG_RUNNER_USAGE.md  README.md  camp_sync.py  checkfront_credentials.example.json  debug_runner.py  requirements.txt  site_configuration.example.json
camp_calendar_sync/: README.md  pyproject.toml  requirements-dev.txt  setup.py
camp_calendar_sync/camp_calendar_sync/: __init__.py  cli.py  core.py  lambda_handler.py
camp_sync/: __init__.py  core.py  lambda_handler.py  requirements.txt
camp_sync/lodgify/: lodgify_sync.py
dbr_signs/blender_scripts/: create_sign.py
terraform/: MIGRATION_TO_S3_BACKEND.md  build_layer.sh  dynamodb.tf  main.tf  outputs.tf  provider.tf  s3.tf  secrets_manager.tf  terraform.tfvars.example  variables.tf
